Fixes overflowing menu items

--- a/quizzler/src/app/modules/views/menu/menu.component.scss
+++ b/quizzler/src/app/modules/views/menu/menu.component.scss
@@ -27,7 +27,7 @@ div.wrapper{
     }
   
     div.upper{
-      height: 5em;
+      height: 15%;
       width: 100%;
       margin: none;
   
@@ -58,7 +58,7 @@ div.wrapper{
     }
   
     div.middle{
-      height: 30em;
+      height: 70%;
       display: flex;
       flex-direction: row;
   
@@ -74,15 +74,18 @@ div.wrapper{
         width: 50%;
         display: flex;
         flex-direction: column;
+        height: 100%;
   
         div.label{
+          display: inline-flex;
+          flex-direction: row;
           height: 25%;
           padding: 1em;
   
           h3{
             font-family: "Bungee";
             font-size: 3em;
-            margin-top: .1em;
+            height: 100%;
     
             &.light, &.none{
               color: $yellow;
@@ -101,6 +104,7 @@ div.wrapper{
         width: 50%;
         display: flex;
         flex-direction: column;
+        height: 100%;
   
         div.option{
           display: inline-flex;
@@ -110,7 +114,6 @@ div.wrapper{
     
           input[type=range]{
             width: 100%;
-            margin-bottom: 1em;
   
             &.light, &.none{
               background-color: $white;
@@ -158,7 +161,7 @@ div.wrapper{
   
           select{
             width: 100%;
-            height: 75%;
+            height: 100%;
             font-family: "BungeeHairline";
             font-size: 1.7em;
             text-align: center;
@@ -166,7 +169,6 @@ div.wrapper{
             border: none;
             -moz-appearance: none;
             -webkit-appearance: none;
-            background-position-x: calc(100% - 1em);
   
             &.light, &.none{
               outline: solid $black 0.1em;
@@ -201,7 +203,7 @@ div.wrapper{
     }
   
     div.lower{
-      height: 5em;
+      height: 15%;
       display: flexbox;
       flex-direction: row;
   
